# flatbufferstest

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py  conanfile.txt  conaninstall.sh  main.cpp
cmake/: Findcxxopts.cmake  Findflatbuffers.cmake  flatcfunctions.cmake
include24.3.25/: CMakeLists.txt  monster_generated.h
schemas1.12.0/: monster.fbs
src/: CMakeLists.txt  main.cpp
